--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -1,52 +1,27 @@
-/*!
- * Bootstrap v5.0.0 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+/******* Customized Bootstrap ********/
 
-// scss-docs-start import-stack
-// Configuration
-@import "functions";
-@import "variables";
-@import "mixins";
-@import "utilities";
+$primary: #32C36C;
+$light: #F6F7F8;
+$dark: #1A2A36;
 
-// Layout & components
-@import "root";
-@import "reboot";
-@import "type";
-@import "images";
-@import "containers";
-@import "grid";
-@import "tables";
-@import "forms";
-@import "buttons";
-@import "transitions";
-@import "dropdown";
-@import "button-group";
-@import "nav";
-@import "navbar";
-@import "card";
-@import "accordion";
-@import "breadcrumb";
-@import "pagination";
-@import "badge";
-@import "alert";
-@import "progress";
-@import "list-group";
-@import "close";
-@import "toasts";
-@import "modal";
-@import "tooltip";
-@import "popover";
-@import "carousel";
-@import "spinners";
-@import "offcanvas";
+$font-family-base: 'Open Sans', sans-serif;
 
-// Helpers
-@import "helpers";
+$headings-font-family: 'Roboto', sans-serif;
 
-// Utilities
-@import "utilities/api";
-// scss-docs-end import-stack
+$body-color: #9B9B9B;
+
+$headings-color: $dark;
+
+$headings-font-weight: 700;
+
+$display-font-weight: 900;
+
+$enable-responsive-font-sizes: true;
+
+$border-radius: 8px;
+
+$link-decoration: none;
+
+$enable-negative-margins: true;
+
+@import "bootstrap/scss/bootstrap";
